--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -386,7 +386,7 @@
                                         </button>
                                         <button type="button" *ngIf="isGranted('Pages.Manage.Project')"
                                                 class="btn btn-sm bg-danger mx-2"
-                                                (click)="delete(project)">
+                                                (click)="delete(projectItem)">
                                             <i class="fas fa-trash"></i>
                                             {{ "Delete" | localize }}
                                         </button>
