--- a/angular/src/app/project/create-project/create-project.component.html
+++ b/angular/src/app/project/create-project/create-project.component.html
@@ -16,7 +16,6 @@
                        name="name"
                        id="name"
                        required
-                        
                        [(ngModel)]="project.name"
                        #nameModel="ngModel"
                        #nameE1 />
@@ -34,7 +33,6 @@
                        name="description"
                        id="description"
                        required
-                        
                        [(ngModel)]="project.description"
                        #descriptionModel="ngModel"
                        #descriptionE1 />
@@ -53,7 +51,6 @@
                        name="contractNumber"
                        id="contractNumber"
                        required
-                        
                        [(ngModel)]="project.contractNumber"
                        #contractNumberModel="ngModel"
                        #contractNumber />
@@ -73,7 +70,6 @@
                        name="startDate"
                        id="startDate"
                        required
-                        
                        [(ngModel)]="project.startDate"
                        #startDateModel="ngModel"
                        #startDate />
@@ -92,7 +88,6 @@
                        name="completeDate"
                        id="completeDate"
                        required
-                        
                        [(ngModel)]="project.completedDate"
                        #completeDateModel="ngModel"
                        #completeDate />
@@ -111,7 +106,6 @@
                        name="siteDelivedDate"
                        id="siteDelivedDate"
                        required
-                        
                        [(ngModel)]="project.siteDelivedDate"
                        #siteDelivedDateModel="ngModel"
                        #siteDelivedDate />
@@ -130,7 +124,7 @@
                 <select name="agencyTypeId"
                         class="form-control"
                         id="agencyTypeId" [(ngModel)]="project.agencyTypeId"
-                        (ngModelChange)="onTypeChange()"
+                        (ngModelChange)="onTypeChange($event)"
                         #agencyTypeIdModel="ngModel"
                         #agencyTypeId required>
                     <option *ngFor="let agencyType of agencyTypes" [value]="agencyType.id">{{agencyType.name}}</option>
@@ -149,6 +143,7 @@
                 <select name="AgencyId"
                         class="form-control"
                         id="AgencyId" [(ngModel)]="project.agencyId"
+                        (ngModelChange)="onAgencyChange($event)"
                         #agencyIdModel="ngModel"
                         #agencyId required>
                     <option *ngFor="let agency of agencies" [value]="agency.id">{{agency.name}}</option>
@@ -159,6 +154,23 @@
             </div>
         </div>
 
+        <div class="form-group row required">
+            <label class="col-md-3 col-form-label" for="ADDRESS">
+                {{ "Departments" | localize }}
+            </label>
+            <div class="col-md-9">
+                <select name="DepartmentId"
+                        class="form-control"
+                        id="DepartmentId" [(ngModel)]="project.departmentId"
+                        #departmentIdModel="ngModel"
+                        #departmentId required>
+                    <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
+                </select>
+
+                <abp-validation-summary [control]="departmentIdModel"
+                                        [controlEl]="departmentId"></abp-validation-summary>
+            </div>
+        </div>
         <div class="form-group row required">
             <label class="col-md-3 col-form-label" for="ADDRESS">
                 {{ "SupervisingEngineer" | localize }}
