--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -31,7 +31,6 @@
                                            name="name"
                                            id="name"
                                            required
-                                            
                                            [(ngModel)]="project.name"
                                            #nameModel="ngModel"
                                            #nameE1 />
@@ -49,7 +48,6 @@
                                            name="description"
                                            id="description"
                                            required
-                                            
                                            [(ngModel)]="project.description"
                                            #descriptionModel="ngModel"
                                            #descriptionE1 />
@@ -68,7 +66,6 @@
                                            name="contractNumber"
                                            id="contractNumber"
                                            required
-                                            
                                            [(ngModel)]="project.contractNumber"
                                            #contractNumberModel="ngModel"
                                            #contractNumber />
@@ -89,7 +86,6 @@
                                            id="startDate"
                                            style="text-align: right;"
                                            required
-                                            
                                            [(ngModel)]="startDatemodel"
                                            #startDateModel="ngModel"
                                            #startDate />
@@ -109,7 +105,6 @@
                                            name="completeDate"
                                            id="completeDate"
                                            required
-                                            
                                            [(ngModel)]="completeDatemodel"
                                            #completeDateModel="ngModel"
                                            #completeDate />
@@ -129,7 +124,6 @@
                                            style="text-align: right;"
                                            id="siteDelivedDate"
                                            required
-                                            
                                            [(ngModel)]="siteDelivedDatemodel"
                                            #siteDelivedDateModel="ngModel"
                                            #siteDelivedDate />
@@ -167,6 +161,7 @@
                                     <select name="agencyId"
                                             class="form-control"
                                             id="agencyId" [(ngModel)]="project.agencyId"
+                                            (ngModelChange)="onAgencyChange($event)"
                                             #agencyIdModel="ngModel"
                                             #agencyId required>
                                         <option *ngFor="let agency of agencies" [value]="agency.id">{{agency.name}}</option>
@@ -177,6 +172,24 @@
                                 </div>
                             </div>
 
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "Departments" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="DepartmentId"
+                                            class="form-control"
+                                            id="DepartmentId" [(ngModel)]="project.departmentId"
+                                            #departmentIdModel="ngModel"
+                                            #departmentId required>
+                                        <option *ngFor="let department of departments" [value]="department.id">{{department.name}}</option>
+                                    </select>
+
+                                    <abp-validation-summary [control]="departmentIdModel"
+                                                            [controlEl]="departmentId"></abp-validation-summary>
+                                </div>
+                            </div>
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "SupervisingEngineer" | localize }}
