--- a/angular/src/app/requests/request-create/request-create.component.html
+++ b/angular/src/app/requests/request-create/request-create.component.html
@@ -68,10 +68,40 @@
                                            id="projectContractNumber"
                                            [(ngModel)]="projectContractNumber" />
                                     <!--<abp-validation-summary [control]="contractNumberModel"
-                                        [controlEl]="contractNumber"></abp-validation-summary>-->
+                [controlEl]="contractNumber"></abp-validation-summary>-->
                                 </div>
                             </div>
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "Agency" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="agencyId"
+                                            class="form-control"
+                                            id="agencyId" [(ngModel)]="projectAgency"
+                                            disabled>
+                                        <option *ngFor="let agency of allAgencies" [value]="agency.id">{{agency.name}}</option>
+                                    </select>
 
+                                   
+                            </div>
+                                </div>
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "Departments" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="DepartmentId"
+                                            class="form-control"
+                                            id="DepartmentId" [(ngModel)]="projectDepartmentId"
+                                           disabled >
+                                        <option *ngFor="let department of allDepartments" [value]="department.id">{{department.name}}</option>
+                                    </select>
+
+                                   
+                                </div>
+                            </div>
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
@@ -204,21 +234,21 @@
                             </div>
 
                             <!--<div class="form-group row required col-6">
-                                <label class="col-md-3 col-form-label" for="ADDRESS">
-                                    {{ "MainRequestTypes" | localize }}
-                                </label>
-                                <div class="col-md-9">
-                                    <select name="mainRequestType" [disabled]="request.id>0"
-                                            class="form-control"
-                                            id="mainRequestType" [(ngModel)]="request.mainRequestType"
-                                            #mainRequestTypeModel="ngModel"
-                                            #mainRequestType required>
-                                        <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
-                                    </select>
-                                    <abp-validation-summary [control]="mainRequestTypeModel"
-                                                            [controlEl]="mainRequestType"></abp-validation-summary>
-                                </div>
-                            </div>-->
+        <label class="col-md-3 col-form-label" for="ADDRESS">
+            {{ "MainRequestTypes" | localize }}
+        </label>
+        <div class="col-md-9">
+            <select name="mainRequestType" [disabled]="request.id>0"
+                    class="form-control"
+                    id="mainRequestType" [(ngModel)]="request.mainRequestType"
+                    #mainRequestTypeModel="ngModel"
+                    #mainRequestType required>
+                <option *ngFor="let mainRequestType of mainRequestTypes" [value]="mainRequestType.id">{{mainRequestType.name | localize}}</option>
+            </select>
+            <abp-validation-summary [control]="mainRequestTypeModel"
+                                    [controlEl]="mainRequestType"></abp-validation-summary>
+        </div>
+    </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="isLabTest">
