--- a/angular/src/app/requests/request-edit/request-edit.component.html
+++ b/angular/src/app/requests/request-edit/request-edit.component.html
@@ -12,6 +12,9 @@
     <section class="container-fluid ng-tns-c101-4">
         <div class="container-fluid">
             <div class="col-container">
+                <div class="card-header d-flex justify-content-center">
+                    <h3 class="card-title">{{ request.statusName | localize }}</h3>
+                </div>
                 <div class="card-body card ng-tns-c101-3">
 
                     <form class="form-horizontal"
@@ -56,7 +59,37 @@
                                 </div>
                             </div>
 
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "Agency" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="agencyId"
+                                            class="form-control"
+                                            id="agencyId" [(ngModel)]="projectAgency"
+                                            disabled>
+                                        <option *ngFor="let agency of allAgencies" [value]="agency.id">{{agency.name}}</option>
+                                    </select>
 
+
+                                </div>
+                            </div>
+
+                            <div class="form-group row required col-6">
+                                <label class="col-md-3 col-form-label" for="ADDRESS">
+                                    {{ "Departments" | localize }}
+                                </label>
+                                <div class="col-md-9">
+                                    <select name="DepartmentId"
+                                            class="form-control"
+                                            id="DepartmentId" [(ngModel)]="projectDepartmentId"
+                                            disabled>
+                                        <option *ngFor="let department of allDepartments" [value]="department.id">{{department.name}}</option>
+                                    </select>
+
+
+                                </div>
+                            </div>
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "StartDate" | localize }}
