--- a/angular/src/app/app-users/app-users.component.html
+++ b/angular/src/app/app-users/app-users.component.html
@@ -110,7 +110,7 @@
                 ">
                                     <td>{{ user.name }}</td>
                                     <td>{{ typValue(user.userTypes) }}</td>
-                                    <td>{{ user.phoneNumber }}</td>
+                                    <td>{{ user.mobilePhoneNumber }}</td>
                                     <!--<td>{{ user.contactName }}</td>-->
                                     <td>
                                         <button type="button"
