--- a/angular/src/app/app-users/app-user-edit/app-user-edit.component.html
+++ b/angular/src/app/app-users/app-user-edit/app-user-edit.component.html
@@ -116,7 +116,7 @@
                     </div>
                 </div>
 
-                <div class="form-group row required">
+                <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="CONTRACTNAME">
                         {{ "PhoneNumber" | localize }}
                     </label>
@@ -125,8 +125,6 @@
                                class="form-control"
                                name="phoneNumber"
                                id="phoneNumber"
-                               required
-                                
                                [(ngModel)]="qcUser.phoneNumber"
                                #phoneNumberModel="ngModel"
                                #phoneNumber />
@@ -192,7 +190,7 @@
                     </div>
                 </div>
 
-                <div class="form-group row required">
+                <div class="form-group row">
                     <label class="col-md-3 col-form-label" for="CONTRACTNAME">
                         {{ "Fax" | localize }}
                     </label>
@@ -201,7 +199,7 @@
                                class="form-control"
                                name="faxaa"
                                id="faxaa"
-                               required
+                               
                                autocomplete="do-not-autofill"
                                 
                                [(ngModel)]="qcUser.fax"
