--- a/angular/src/app/project/edit-project/edit-project.component.html
+++ b/angular/src/app/project/edit-project/edit-project.component.html
@@ -38,7 +38,7 @@
                                                             [controlEl]="nameE1"></abp-validation-summary>
                                 </div>
                             </div>
-                            <div class="form-group row required col-6">
+                            <!--<div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
                                     {{ "Description" | localize }}
                                 </label>
@@ -54,7 +54,7 @@
                                     <abp-validation-summary [control]="descriptionModel"
                                                             [controlEl]="descriptionE1"></abp-validation-summary>
                                 </div>
-                            </div>
+                            </div>-->
 
                             <div class="form-group row required col-6">
                                 <label class="col-md-3 col-form-label" for="CommericalRegisterationNumber">
@@ -81,6 +81,7 @@
                                 </label>
                                 <div class="col-md-9">
                                     <input type="date"
+                                           [min]="minDate"
                                            class="form-control"
                                            name="startDate"
                                            id="startDate"
@@ -104,6 +105,7 @@
                                            style="text-align: right;"
                                            name="completeDate"
                                            id="completeDate"
+                                            [min]="project.startDate"
                                            required
                                            [(ngModel)]="completeDatemodel"
                                            #completeDateModel="ngModel"
@@ -122,6 +124,7 @@
                                            class="form-control"
                                            name="siteDelivedDate"
                                            style="text-align: right;"
+                                            [min]="project.startDate"
                                            id="siteDelivedDate"
                                            required
                                            [(ngModel)]="siteDelivedDatemodel"
@@ -134,7 +137,7 @@
 
 
 
-                            <div class="form-group row required col-6">
+                            <div class="form-group row  col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "AgencyType" | localize }}
                                 </label>
@@ -144,7 +147,7 @@
                                             id="agencyTypeId" [(ngModel)]="project.agencyTypeId"
                                             (ngModelChange)="onTypeChange($event)"
                                             #agencyTypeIdModel="ngModel"
-                                            #agencyTypeId required>
+                                            #agencyTypeId >
                                         <option *ngFor="let agencyType of agencyTypes" [value]="agencyType.id">{{agencyType.name}}</option>
                                     </select>
 
@@ -153,7 +156,7 @@
                                 </div>
                             </div>
 
-                            <div class="form-group row required col-6">
+                            <div class="form-group row col-6">
                                 <label class="col-md-3 col-form-label" for="ADDRESS">
                                     {{ "Agency" | localize }}
                                 </label>
@@ -163,7 +166,7 @@
                                             id="agencyId" [(ngModel)]="project.agencyId"
                                             (ngModelChange)="onAgencyChange($event)"
                                             #agencyIdModel="ngModel"
-                                            #agencyId required>
+                                            #agencyId >
                                         <option *ngFor="let agency of agencies" [value]="agency.id">{{agency.name}}</option>
                                     </select>
 
